@@ -30,21 +30,21 @@
 // Set here which client version do you accept. Add all values of clients:
 // Clients older than accepted versions, and versions not set to 'accepted'
 // here will be rejected when logging in
-//    1: Clients 2004-09-06aSakray and older (packet versions 4-9)
-//    2: 2004-09-06aSakexe (version 10)
-//    4: 2004-09-21aSakray (version 11)
-//    8: 2004-10-11aSakexe (version 12)
-//   16: 2004-10-25aSakexe (version 13)
-//   32: 2004-11-01aSakexe (version 14)
-//   64: 2004-12-06aSakexe (version 15)
-//  128: 2005-01-10aSakexe (version 16)
-//  256: 2005-05-09aSakexe (version 17)
-//  512: 2005-06-28aSakexe (version 18)
-// 1024: 2006-04-03aSakexe (version 19)
-// 2048: 2007-01-08aSakexe (version 20)
-// 4096: 2007-02-12aSakexe (version 21)
-// default value: 8191 (all clients)
-packet_ver_flag: 8191
+// 0x0001: Clients 2004-09-06aSakray and older (packet versions 4-9)
+// 0x0002: 2004-09-06aSakexe (version 10)
+// 0x0004: 2004-09-21aSakray (version 11)
+// 0x0008: 2004-10-11aSakexe (version 12)
+// 0x0010: 2004-10-25aSakexe (version 13)
+// 0x0020: 2004-11-01aSakexe (version 14)
+// 0x0040: 2004-12-06aSakexe (version 15)
+// 0x0080: 2005-01-10aSakexe (version 16)
+// 0x0100: 2005-05-09aSakexe (version 17)
+// 0x0200: 2005-06-28aSakexe (version 18)
+// 0x0400: 2006-04-03aSakexe (version 19)
+// 0x0800: 2007-01-08aSakexe (version 20)
+// 0x1000: 2007-02-12aSakexe (version 21)
+// default value: 0xFFFF (all clients)
+packet_ver_flag: 0xFFFF
 
 // Minimum delay between whisper/global/party/guild messages (in ms)
 // Messages that break this threshold are silently omitted. 
